set correct scrolbar for dialog on mobile

--- a/src/components/Dialog/Dialog.scss
+++ b/src/components/Dialog/Dialog.scss
@@ -100,6 +100,7 @@
 
         .tm-dialog-body {
           height: calc(100% - 50px);
+          padding-bottom: 0;
           overflow-y: auto;
           overflow-x: auto;
         }
